--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,4 @@
+spring.application.name: 'bigfive'
+
 spring.jpa.database-platform: 'org.tbk.bigfive.sqlite.SQLiteDialect'
 spring.jpa.hibernate.ddl-auto: 'update'
