--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,7 @@ dependencies {
 
     compile("io.reactivex.rxjava2:rxjava:2.0.5")
 
+    compile("org.springframework.boot:spring-boot-starter-security")
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-devtools")
 
