--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-security")
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-devtools")
+    compile("com.google.guava:guava:19.0")
 
     testCompile("junit:junit")
     testCompile("org.springframework.boot:spring-boot-starter-test")
