--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,9 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-jetty")
     // end::jetty[]
 
+    compile("com.fasterxml.jackson.datatype:jackson-datatype-hibernate5:2.8.7")
+
+    compile("org.springframework.boot:spring-boot-starter-data-rest")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("com.zaxxer:HikariCP:2.6.0") {
         exclude group: "org.slf4j", module: "slf4j-api"
@@ -89,8 +92,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-devtools")
     compile("com.google.guava:guava:19.0")
+    compile("org.apache.commons:commons-lang3:3.5")
 
-    testCompile("junit:junit")
     testCompile("org.springframework.boot:spring-boot-starter-test")
     // temporarily disabled to focus on sqlite
     //testCompile("com.h2database:h2")
