--- a/build.gradle
+++ b/build.gradle
@@ -91,8 +91,10 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-security")
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-devtools")
+
     compile("com.google.guava:guava:19.0")
     compile("org.apache.commons:commons-lang3:3.5")
+    compileOnly("org.projectlombok:lombok:1.16.14")
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
     // temporarily disabled to focus on sqlite
