--- a/src/main/resources/application-development.yml
+++ b/src/main/resources/application-development.yml
@@ -1,11 +1,10 @@
 spring.application.name: 'bigfive'
-spring.profiles.active: production
+spring.profiles.active: development
 
 spring.jpa.database-platform: 'org.tbk.bigfive.sqlite.SQLiteDialect'
-spring.jpa.hibernate.ddl-auto: 'update'
+spring.jpa.hibernate.ddl-auto: 'create-drop'
 
-
-app.name: bigfive
+app.name: bigfive (dev)
 app.description: an app for named lists
 
 server.port: 8080
@@ -20,6 +19,7 @@ management.context-path: /actuator
 # LOGGING
 logging.path: ./var/log
 logging.file: application.log
-logging.config: classpath:logback.xml
+logging.config: classpath:logback-development.xml
 logging.level.org.springframework: INFO
 
+spring.jpa.show-sql: true
