--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,9 @@ bootRepackage {
 }
 
 repositories {
-    mavenCentral()
+    //maven { url 'http://repo.spring.io/snapshot' }
+    maven { url 'http://repo.spring.io/milestone' }
+    jcenter()
 }
 
 dependencies {
@@ -94,13 +96,13 @@ dependencies {
     }
     compile('org.xerial:sqlite-jdbc:3.16.1')
 
-    compile('io.reactivex.rxjava2:rxjava:2.0.5')
+    compile 'io.projectreactor:reactor-core:3.1.0.M1'
 
     compile('org.springframework.boot:spring-boot-starter-security')
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('org.springframework.boot:spring-boot-devtools')
 
-    compile('com.google.guava:guava:19.0')
+    compile('com.google.guava:guava:21.0')
     compile('org.apache.commons:commons-lang3:3.5')
     compileOnly('org.projectlombok:lombok:1.16.14')
 
